# py-rcsb_db

./: .gitignore  .gitmodules  .isort.cfg  HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-pipelines.yml-prior  azure-template-publish-job.yml  azure-template-tox-job.yml  pylintrc  pyproject.toml  requirements.txt  requiurements.txt  setup.cfg  setup.py  tox.ini  tox.ini-prev.ini
SAVED/: SchemaDefPdbxLoaderCockroachDbMultiTests.py  UpdateTimeUtil.py  WorkflowSchemaReportTests.py
SAVED/schema/: ChemCompSchemaDef.py  PdbDistroSchemaDef.py  PdbxSchemaDefV4.py  SchemaDefBase.py  StatusHistorySchemaDef.py
SAVED/tests-mysql/: BirdLoaderTests.py  ChemCompLoaderTests.py  StatusHistoryLoaderTests.py
rcsb/db/: __init__.py
rcsb/mock-data/: README.md
rcsb_db/: __init__.py
rcsb_db/SAVED/: SchemaDefLoaderCockroachDbImportMultiTests.py  SchemaDefPdbxLoaderCockroachDbMultiTests.py  SchemaDefPdbxLoaderCrateDbMultiTests.py
rcsb_db/cockroach/: CockroachDbUtil.py
rcsb_db/crate/: CrateDbLoader.py  CrateDbUtil.py
rcsb_db/data/: 3rij.cif  5hoh.cif  D_1000200183_status-history_P1.cif.V1  PRD_000001.cif  dbload-setup-example.cfg
rcsb_db/define/: DataTypeApplicationInfo.py  DataTypeInstanceInfo.py  DictInfo.py  DictMethodRunner.py  SchemaDefAccess.py  SchemaDefAccessBase.py  SchemaDefBuild.py
rcsb_db/exec/: DbLoadExec.py  ETLExec.py  RepoHoldingsEtlWorker.py  RepoLoadExec.py  RepoScanExec.py  SequenceClustersEtlWorker.py
rcsb_db/helpers/: DictInfoHelper.py  DictInfoHelperBase.py  DictMethodRunnerHelper.py  DictMethodRunnerHelperBase.py  SchemaDefHelper.py  SchemaDocumentHelper.py  SchemaDocumentHelperBase.py
rcsb_db/io/: FileUtil.py  IoUtil.py  MarshalUtil.py
rcsb_db/loaders/: ClusterDataPrep.py  DataTransformFactory.py  SchemaDefCrateDbLoader.py  SchemaDefDataPrep.py  SchemaDefLoader.py
rcsb_db/mongo/: Connection.py  ConnectionBase.py  DocumentLoader.py  MongoDbLoaderWorker.py  MongoDbUtil.py  PdbxLoader.py
rcsb_db/mysql/: Connection.py  ConnectionBase.py  MyConnectionBase.py  MyDbAdapter.py  MyDbUtil.py  MysqlSchemaImporter.py  SchemaDefLoader.py
rcsb_db/processors/: ClusterDataPrep.py  DataExchangeStatus.py  DataTransformFactory.py  RepoHoldingsDataPrep.py  SchemaDefDataPrep.py  SchemaDefReShape.py
rcsb_db/schema/: BirdSchemaDef.py  ChemCompSchemaDef.py  DaInternalSchemaDef.py  DataTypeInfo.py  DictDataTypeInfo.py  DictInfoHelper.py  DictInfoHelperBase.py  MessageSchemaDef.py  PdbDistroSchemaDef.py  PdbxSchemaDefV4.py  PdbxSchemaMapReader.py  SchemaDefBase.py  SchemaDefBuild.py  SchemaDefDictInfo.py  StatusHistorySchemaDef.py  WorkflowSchemaDef.py
rcsb_db/sql/: MyDbSqlGen.py  MyQueryDirectives.py  QueryDirectives.py  SqlGen.py
rcsb_db/tests/: ClusterDataPrepTests.py  DataExchangeStatusTests.py  DataTypeApplicationTests.py  DictDataTypeInfoTests.py  DictInfoTests.py  DictMethodRunerTests.py  LoggerStreamTests.py  MultiProcLoggingTests.py  MyDbSqlGenTests.py  PdbDistroSchemaReportTests.py  PdbxSchemaMapReaderTests.py  ProvenanceUtilTests.py  RepoHoldingsDataPrepTests.py  ScanRepoUtilTests.py  SchemaDefAccessConfigTests.py  SchemaDefAccessTests.py  SchemaDefBuildTests.py  SchemaDefDataPrepTests.py  SchemaDefDictInfoTests.py  SchemaDefExtendTests.py  SchemaMapBuildTests.py  SqlGenTests.py  TEST-REPOSCAN-EXEC-MOCK.sh  TimeUtilTests.py  WorkflowSchemaReportTests.py
rcsb_db/tests-cockroach/: ConnectionTests.py  SchemaDefLoaderCockroachDbImportMultiTests.py  SchemaDefLoaderCockroachDbMultiTests.py  SchemaDefLoaderCockroachDbTests.py  SchemaDefPdbxLoaderCockroachDbMultiTests.py
rcsb_db/tests-crate/: SchemaDefLoaderCrateDbMultiTests.py  SchemaDefLoaderCrateDbTests.py  SchemaDefPdbxLoaderCrateDbMultiTests.py
rcsb_db/tests-mongo/: ConnectionBaseTests.py  ConnectionTests.py  DataExchangeStatusLoaderTests.py  DocumentLoaderTests.py  MongoDbLoaderWorkerTests.py  MongoDbUtilTests.py  PdbxLoaderTests.py  RepoHoldingsLoaderTests.py  SchemaDefLoaderMongoDbTests.py  SequenceClusterLoaderTests.py  TEST-ETL-EXEC-MOCK.sh  TEST-REPOLOAD-EXEC-MOCK.sh
rcsb_db/tests-mysql/: BirdLoaderTests.py  ChemCompLoaderTests.py  ConnectionTests.py  MyDbUtilTests.py  MyQueryDirectivesTests.py  QueryDirectivesTests.py  SchemaDefLoaderDbTests.py  SchemaDefLoaderTests.py  StatusHistoryLoaderTests.py
rcsb_db/utils/: ConfigUtil.py  ContentTypeUtil.py  MultiProcLogging.py  MultiProcUtil.py  PdbxSchemaMapReader.py  (+5 more)
(+428 files in other folders)
