[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb.db"
description = "RCSB Python Database Access and Loading Utility Classes"
version = "1.813"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
maintainers = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-dateutil",
    "pytz",
    "jsonschema >= 2.6.0",
    "pymongo >= 4.8.0",
    "mmcif >= 0.91.0",
    "rcsb.utils.config >= 0.40",
    "rcsb.utils.io >= 1.52",
    "rcsb.utils.multiproc >= 0.19",
    "rcsb.utils.dictionary >= 1.32",
    "rcsb.utils.repository >= 0.50",
]

[project.optional-dependencies]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage", "jsonschema", "rcsb.utils.chemref >= 0.91", "jsondiff >= 1.2.0", "check-manifest"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_db"

[project.scripts]
exdb_repo_load_cli = "rcsb.db.cli.RepoLoadExec:main"
repo_scan_cli = "rcsb.db.cli.RepoScanExec:main"
schema_update_cli = "rcsb.db.cli.SchemaUpdateExec:main"
etl_exec_cli = "rcsb.db.cli.ETLExec:main"

# ----------------  hatch configuration ----------------
[tool.hatch.build.targets.sdist]
include = [
    "/rcsb/**",
    "/README.md",
    "/LICENSE",
    "/HISTORY.txt",
    "/pyproject.toml",
]
exclude = [
    "/rcsb/mock-*",
    "/rcsb/db/test*/test*-*",
    "/rcsb/db/test*/**.tdd",
    "/rcsb/db/test*/**.txt",
    "/rcsb/db/test*/**.sh",
]

[tool.hatch.build.targets.wheel]
packages = ["rcsb"]
exclude = [
    "/rcsb/db/test*",
    "/rcsb/mock-*",
]

[tool.hatch.envs.default]
skip-install = true

# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]

# ----------------  UV configuration ----------------
# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
